general check hiden sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/general.css">
     <title>GIFOS</title>
   </head>
   <body>
@@ -150,16 +151,16 @@
 
     <section>
       <div class="favorite-container-all">
-        <div class="favo-cont" id="favo-cont">
+        <!-- <div class="favo-cont" id="favo-cont">
           <img
             src="./assets/icon-favoritos.svg"
             alt="Favo Hearth Icon"
             class="favo-hearth-icon"
             id="favo-hearth-icon"
-          />
+          /> -->
 
-          <h2 id="favo-title">Favoritos</h2>
-        </div>
+          <!-- <h2 id="favo-title">Favoritos</h2>
+        </div> -->
       </div>
     </section>
 
